--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ body{
     text-transform: uppercase;
     padding: 5%;
     text-decoration: none;
-    color: rgba(225, 225, 225, 0.733);
+    color: darkblue;
 }
 #button {
     background-color: lime;
